<resources>
    <string name="app_name">Task Planner</string>


    <declare-styleable name="AvatarImageBehavior">
        <attr name="finalYPosition" format="dimension" />
        <attr name="startXPosition" format="dimension" />
        <attr name="startToolbarPosition" format="dimension" />
        <attr name="startHeight" format="dimension" />
        <attr name="finalHeight" format="dimension" />
    </declare-styleable>

    <!-- dimensions -->
    <!--Integer Value that number of column in RecyclerView-->
    <integer name="photo_list_preview_columns">2</integer>

    <!-- inter spacing between RecyclerView's Item-->
    <dimen name="photos_list_spacing">24dp</dimen>

    <string name="facebook_application_id">555101395154428</string>
    <string name="facebook_login_protocol_scheme">fb555101395154428</string>

    <string name="change_name">Change User Name</string>
    <string name="change_job">Change User Job</string>
    <string name="change_name_job">Change Name / Job</string>
    <string name="select_photo_from_gallery">select photo \'from gallery\'</string>
    <string name="take_photo_from_camera">Take photo \'from camera\'</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="view_profile_picture">View profile picture</string>


    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signup">dont have an account ? <b>Sign up.</b></string>
    <string name="full_name">Full Name</string>
    <string name="empty">can\'t be empty</string>
    <string name="not_valid">email is not valid</string>
    <string name="pass_not_valid">password is not valid</string>
    <string name="len_less_6">password should be at least 6 characters long</string>
    <string name="reminder_notification">"you told me to remind you to "</string>
    <string name="reminder_notification_at">" at "</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="create_new_task">Create New Task</string>
    <string name="create_new_target">Create New Target</string>
    <string name="create_new_reminder">Create New Reminder</string>
    <string name="create_new_challenge">Create New Challenge</string>
    <string name="show_targets">Show Targets</string>
    <string name="show_reminders">Show Reminders</string>
    <string name="show_challenge">Show Challenge</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="name_of_the_new_project">name of the new project 😌</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_task">Add task</string>
    <string name="productive_day">Productive Day, </string>
    <string name="create_new_target_title">Create new target</string>
    <string name="create_new_task_title">Create new task</string>
    <string name="create_new_reminder_title">Create new reminder</string>
    <string name="create_new_challenge_title">Create new challenge</string>
    <string name="title">Title</string>
    <string name="deadline">Deadline</string>
    <string name="note">Note</string>
    <string name="add_target_s_steps">Add Target\'s Steps</string>
    <string name="add_note">Add Note</string>
    <string name="create_target">Create target</string>
    <string name="date">Date</string>
    <string name="start_time">Start time</string>
    <string name="pm">PM</string>
    <string name="end_time">End time</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="add_category">Add Category</string>
    <string name="create_task">Create task</string>
    <string name="reminder">Reminder</string>
    <string name="time">Time</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="set_time">Set time</string>
    <string name="repeats">Repeats</string>
    <string name="don_t_repeat">Don\'t Repeat</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="every">Every</string>
    <string name="day">day</string>
    <string name="events">events</string>
    <string name="create_reminder">Create reminder</string>
    <string name="my_tasks">My tasks</string>
    <string name="to_do">To Do</string>
    <string name="in_progress">In Progress</string>
    <string name="done">Done</string>
    <string name="active_projects">Active Projects</string>
    <string name="no_projects_found">No projects found</string>
    <string name="reminders">Reminders</string>
    <string name="targets">Targets</string>
    <string name="you_should_be_sleep_at_this_time">you should be sleep at this time! 🥺</string>
    <string name="ok_i_will_sleep_change_the_time">OK i will sleep ,change the time ♥️</string>
    <string name="ignore_i_wont_sleep">ignore, I won\'t sleep🥺</string>
    <string name="back">back</string>
    <string name="delete">delete</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="number_of_days_lasts">number of days lasts</string>
    <string name="challenge_start_at">Challenge Start at</string>
    <string name="challenge_ended_at">Challenge ended at</string>
    <string name="stop_counting">Stop Counting</string>
    <string name="set_count_to_0">Set count to 0</string>
    <string name="number_of_days">number of days</string>
    <string name="day2">Day</string>
    <string name="challenges">Challenges</string>
    <string name="challenge_start_date">Challenge start date</string>
    <string name="create_challenge">Create challenge</string>
    <string name="welcome">Welcome </string>
    <string name="please_pick_a_picture">Please pick a picture</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="are_you_sure_you_want_to_delete">"Are you sure you want to delete "</string>
    <integer name="bold_index">32</integer>
    <string name="challenge_question">challenge ?</string>
    <string name="challenge_deleted">challenge deleted 😍🙈🙈♥️</string>
    <string name="ok_nothing_deleted">Ok ♥️nothing deleted</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="week">week</string>
    <string name="please_select_the_time">Please select the time</string>
    <string name="reminder_in_the_past">Reminder can\'t be in the past!</string>
    <string name="done_toast">Done \uD83D\uDE0C♥️</string>
    <string name="ok_sleep">Ok️😥</string>
    <string name="love_you">Love you ,babe😍🙈🙈♥️</string>
    <string name="today">ToDay</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="last_step_name_empty">Last Step Name Can\'t be empty</string>
    <string name="last_step_description_empty">Last Step Description Can\'t be empty</string>
    <string name="start_time_should_be_at">"Start time should be at least at "</string>
    <string name="end_time_should_be_at">End time should be at least at</string>
    <string name="should_select_category">should select Category !</string>
    <string name="this_task_time_is_interrupt_with">this task time is interrupt with</string>
    <string name="task_time">task time.</string>
    <string name="this_project_already_exist">this Project already exist</string>
    <string name="hours_progress">hours progress</string>
    <string name="project">Project</string>
    <string name="deleted">" deleted 😍🙈🙈♥️"</string>
    <string name="tasks_now">tasks now .</string>
    <string name="enter_your_name">"Enter your name 😌 "</string>
    <string name="enter_your_job">"Enter your job 😌 "</string>
    <string name="target_has_no_details">This target has no details to show.</string>
    <string name="project_with_all_tasks_inside_it">project with all tasks inside it(</string>
    <string name="task_question">task ) ?</string>
    <string name="target_with_all_steps_inside_it">target with all steps inside it(</string>
    <string name="step_question">step ) ?</string>
    <string name="target_deleted">target deleted 😍🙈🙈♥️</string>
    <string name="todo">ToDo</string>
    <string name="project_name">Project name</string>
    <string name="step_name">Step Name</string>
    <string name="step_description">Step description</string>
    <string name="add_new_step">Add new step</string>
    <string name="remove">Remove</string>
    <string name="job">Job</string>
    <string name="arrow"><![CDATA[" - -> "]]></string>
    <string name="days">days</string>
    <string name="or">Or</string>
    <string name="select_a_deadline_for_this_challenge">Select a deadline for this Challenge</string>
    <string name="challenge_title">Challenge title</string>
    <string name="cant_be_zero">Can\'t be zero</string>
    <string name="current_challenges">Current Challenges</string>
    <string name="done_challenges">Done Challenges</string>
    <string name="three_days_notification_title">Are you OK ?</string>
    <string name="three_days_notification_content">"you haven't opened the app 3 days ago!😢\nAre you OK?😦 \nIs there a problem with me?😰"</string>
    <string name="challenge_30_notification_content"> 30% من التحدي خلص عااش استمر 🤩</string>
    <string name="challenge_50_notification_content">عاش يا بطل المفروض دلوقتي تكون خلصت نص التحدي 👏👏❤❤</string>
    <string name="challenge_90_notification_content"> مش فاضل كتير ناقص 10% بس و تخلص التحدي ده انت قدها يا بطل 😍😘🎈</string>
    <string name="challenge_100_notification_content"> عااش يا وحش خلصت التحدي بنجاااح 💪 يو ار ماي هيرو 😍😍💪</string>

    <string-array name="for_until_array">
        <item>Forever</item>
        <item>Until</item>
        <item>For</item>
    </string-array>

    <string-array name="days">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
