<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/background_yellowsq">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_chip_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name_of_the_new_project"
        android:paddingTop="16dp"
        android:textColorHint="@color/black"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="text"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/ok_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_chip_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/ok"
        android:textColor="@color/blue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/cancel_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_chip_name"
        android:layout_toStartOf="@id/ok_dialog"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/cancel"
        android:textColor="@color/red"
        android:textSize="18sp" />


</RelativeLayout>