<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowhite"
    tools:context=".ui.fragments.CreateNewTargetFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/yellowhite">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/open_drawer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingTop="8dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_menu" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/top_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_toolbar">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_input_layout"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="#309397"
                android:src="@drawable/calender" />


            <TextView
                android:id="@+id/headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/create_new_challenge_title"
                android:textColor="#000"
                android:textSize="32sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/headline"
                android:layout_marginStart="16dp"
                android:hint="@string/title"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_input_layout"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="36dp"
                android:layout_toStartOf="@id/fab"
                android:hint="@string/challenge_start_date"
                android:textColorHint="@color/enable_false_hintcolor"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="text"
                    android:textColor="@color/enable_false_color"
                    android:textColorHint="@color/enable_false_hintcolor"

                    />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/top_relative2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_relative"
            android:layout_centerHorizontal="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="@string/number_of_days"
                android:textColorHint="@color/enable_false_hintcolor"
                android:minWidth="50dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textColor="@color/enable_false_color"
                    android:textColorHint="@color/enable_false_hintcolor"
                    tools:text="0"
                    android:gravity="center"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/days_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/days"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:fontFamily="@font/poppins"
                    android:inputType="text"
                    android:text="@string/days"
                    android:textColor="@color/enable_false_color"
                    android:textColorHint="@color/enable_false_hintcolor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/days_to_without"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/days_tv"
                android:hint="@string/challenge_title"
                android:textColorHint="@color/enable_false_hintcolor"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/enable_false_color"
                    android:textColorHint="@color/enable_false_hintcolor"
                    tools:text="without watching corn" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_relative2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/select_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/or_tv"
            android:layout_centerHorizontal="true"
            android:text="@string/select_a_deadline_for_this_challenge"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/deadline_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/select_deadline"
            tools:text="26/7/2020"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:id="@+id/create_challenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/deadline_date"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="24dp"
            android:background="@drawable/background_createtask"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:text="@string/create_challenge"
            android:textAllCaps="false"
            android:textColor="#FFF" />

    </RelativeLayout>
</ScrollView>